add try catch in controller, add modal for error dispay in front end
